--- a/.github/workflows/blockchain_ci.yml
+++ b/.github/workflows/blockchain_ci.yml
@@ -25,6 +25,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
       - name: Test
-        working-directory: test
         run: |
-          python -m unittest block_test.py node_test.py server_test.py
+          python -m unittest test.block_test.BlockTestCase test.node_test.NodeTestCase test.server_test.ServerTestCase
